# lewis-signaling

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.prime/: .env-metadata.json
lewis_signaling/: __init__.py  config.py  lewis_signaling.py  prompt.py  vocabulary.py
