[project]
name = "lewis-signaling"
description = "Lewis Signaling Game multi-agent environment"
tags = ["multi-agent", "referential-game", "communication"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lewis_signaling"]

[tool.uv.sources]
verifiers = { git = "https://github.com/nph4rd/verifiers.git", rev = "e7bc2837" }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I"]
ignore = ["F722", "F821"]
